tests/bad/expr-statements/block_multiple_yields.ae
/// fail: Cannot yield multiple times in a block

def main() {
    let x = match 5 {
        0 => {
            yield "hello"
            yield "bye"
        }
        else => "ok"
    }
}